chore : clean up deprecation warnings in camel-cxf tests, mostly doPostSetup/doPostTearDown and URL changes